<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.slmns.birdcontrol.RegisterActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_Up"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:id="@+id/SignUp_tv"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress"
        android:id="@+id/et_Email"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:id="@+id/et_Pass"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass2"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:id="@+id/et_Pass2"
        />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_Up"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_SignUp"
        android:layout_margin="10dp"
        android:onClick="SignUp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Goto_Signin"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
       android:id="@+id/signin_text"
        />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_In"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:id="@+id/btn_SignIn"
        android:onClick="SignIn"
        />




</LinearLayout>
