<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.example.slmns.birdcontrol.LoginActivity">

    <TextView
        android:id="@+id/SignIn_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_In"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"



        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/Email"
        android:id="@+id/Email_et"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:id="@+id/Pass_et"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_In"
        android:layout_gravity="center_horizontal"
        android:id="@+id/SignIn_btn"
        android:onClick="SignIn"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Make_account"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
       android:id="@+id/Text_tv"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_Up"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:id="@+id/SignUp_btn"
        android:onClick="SignUp"



        />

</LinearLayout>
