<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.slmns.birdcontrol.FrontActivity"
    >

    

        <TextView
            android:id="@+id/tvfront"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


    <Button
        android:id="@+id/btn_watchbirds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvfront"
        android:layout_marginStart="22dp"
        android:layout_marginTop="46dp"
        android:text="@string/birds"
        android:onClick="watchbirds"/>


    <Button
        android:id="@+id/btn_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_info"
        android:layout_marginStart="56dp"
        android:layout_toEndOf="@+id/btn_watchbirds"
        android:text="@string/picture"
        android:onClick="PictureBirds"/>


    <Button
        android:id="@+id/btn_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_watchbirds"
        android:layout_below="@+id/btn_watchbirds"
        android:layout_marginTop="50dp"
        android:text="@string/info"
        android:onClick="Information"/>










</RelativeLayout>


